--- a/index.html
+++ b/index.html
@@ -15,56 +15,71 @@
     <title>Frontend Mentor | Equalizer landing page</title>
   </head>
   <body>
-    <header>
-      <div><img src="/assets/logo.svg" alt="equalizer logo" /></div>
-      <div class="header-info">
-        <h1>We make your music sound extraordinary.</h1>
-        <p>
-          A system audio equalizer specifically designed for Android and iOS.
-          Freely tune the way your music sounds with a professional grade
-          parametric EQ & volume mixer. Control bass, mids, treble, gain
-          control, reverb, and more!
-        </p>
-      </div>
-    </header>
-    <main>
-      <article class="phone">
-        <img src="/assets/illustration-app.png" alt="phone" />
-      </article>
-      <article class="equalizer-info">
-        <h2>Premium EQ</h2>
-        <p>
-          Get expert-level control with a robust equalizer, volume mixer, and
-          spatial audio. Take your listening experience to a whole new level and
-          access all our incredible features!
-        </p>
-        <p class="pricing"><span>$4</span> / month</p>
-        <button class="btn btn-ios">
-          <picture class="cart-icon">
-            <img src="/assets/icon-apple.svg" alt="apple logo" /> </picture
-          >iOS Download
-        </button>
-        <button class="btn btn-android">
-          <picture class="cart-icon">
-            <img src="/assets/icon-android.svg" alt="android logo" /> </picture
-          >Android Download
-        </button>
-      </article>
-    </main>
-    <footer>
-      <div><img src="/assets/logo.svg" alt="equalizer logo" /></div>
-      <div class="contact-us">
-        <p>All rights reserved © Equalizer 2021</p>
-        <p>
-          Have any problems? Contact us via social media or email us at <br />
-          <strong> equalizer@example.com</strong>
-        </p>
-      </div>
-      <div class="social-links">
-        <img src="/assets/icon-facebook.svg" alt="facebook" />
-        <img src="/assets/icon-instagram.svg" alt="instagram" />
-        <img src="/assets/icon-twitter.svg" alt="twitter" />
-      </div>
-    </footer>
+    <div class="container">
+      <header>
+        <div><img src="/assets/logo.svg" alt="equalizer logo" /></div>
+        <div class="header-info">
+          <h1>We make your music sound extraordinary.</h1>
+          <p>
+            A system audio equalizer specifically designed for Android and iOS.
+            Freely tune the way your music sounds with a professional grade
+            parametric EQ & volume mixer. Control bass, mids, treble, gain
+            control, reverb, and more!
+          </p>
+        </div>
+        <div class="header-pattern">
+          <img src="/assets/bg-pattern-1.svg" alt="bg-pattern-1" />
+        </div>
+      </header>
+      <main>
+        <article class="phone">
+          <img src="/assets/illustration-app.png" alt="phone" />
+        </article>
+        <article class="equalizer-info">
+          <h2>Premium EQ</h2>
+          <p>
+            Get expert-level control with a robust equalizer, volume mixer, and
+            spatial audio. Take your listening experience to a whole new level
+            and access all our incredible features!
+          </p>
+          <p class="pricing"><span>$4</span> / month</p>
+          <button class="btn btn-ios">
+            <picture class="cart-icon">
+              <img src="/assets/icon-apple.svg" alt="apple logo" /> </picture
+            >iOS Download
+          </button>
+          <button class="btn btn-android">
+            <picture class="cart-icon">
+              <img
+                src="/assets/icon-android.svg"
+                alt="android logo"
+              /> </picture
+            >Android Download
+          </button>
+        </article>
+      </main>
+      <footer>
+        <div class="footer-logo-contact">
+          <div><img src="/assets/logo.svg" alt="equalizer logo" /></div>
+          <div class="contact-us">
+            <p>All rights reserved © Equalizer 2021</p>
+            <p>
+              Have any problems? Contact us via social media or email us at
+              <br />
+              <strong> equalizer@example.com</strong>
+            </p>
+          </div>
+        </div>
+        <div class="social-links">
+          <a href="#">
+            <img src="/assets/icon-facebook.svg" alt="facebook"
+          /></a>
+          <a href="#"
+            ><img src="/assets/icon-instagram.svg" alt="instagram"
+          /></a>
+          <a href="#"><img src="/assets/icon-twitter.svg" alt="twitter" /></a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
