--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       href="./assets/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <title>Frontend Mentor | Equalizer landing page</title>
   </head>
@@ -70,14 +77,17 @@
             </p>
           </div>
         </div>
+
         <div class="social-links">
           <a href="#">
-            <img src="/assets/icon-facebook.svg" alt="facebook"
-          /></a>
-          <a href="#"
-            ><img src="/assets/icon-instagram.svg" alt="instagram"
-          /></a>
-          <a href="#"><img src="/assets/icon-twitter.svg" alt="twitter" /></a>
+            <i class="fa-brands fa-facebook icon"></i>
+          </a>
+          <a href="#">
+            <i class="fa-brands fa-instagram icon"></i>
+          </a>
+          <a href="#">
+            <i class="fa-brands fa-twitter icon"></i>
+          </a>
         </div>
       </footer>
     </div>
